# quant-lab

./: README.md  pyproject.toml  requirements.txt
notebooks/: brownian_motion.ipynb  test.ipynb
src/: brownian.py
src/stochastic/: brownian.py
